--- a/controller/config/crd/bases/core.kalm.dev_rolebindings.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_rolebindings.yaml
@@ -64,6 +64,7 @@ spec:
               - clusterViewer
               - clusterEditor
               - clusterOwner
+              - tenantOwner
               type: string
             subject:
               minLength: 1
