--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -15,6 +15,8 @@ spec:
     plural: kalmoperatorconfigs
     singular: kalmoperatorconfig
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: KalmOperatorConfig is the Schema for the kalmoperatorconfigs API
