--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -53,11 +53,6 @@ spec:
                 type: string
               description: annotations will add to pods
               type: object
-            Labels:
-              additionalProperties:
-                type: string
-              description: labels will add to pods
-              type: object
             command:
               type: string
             dnsPolicy:
@@ -122,6 +117,11 @@ spec:
                     to Limits if that is explicitly specified, otherwise to an implementation-defined
                     value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                   type: object
+              type: object
+            labels:
+              additionalProperties:
+                type: string
+              description: labels will add to pods
               type: object
             livenessProbe:
               description: Probe describes a health check to be performed against
