try rm KalmMode

--- a/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
@@ -96,8 +96,8 @@ spec:
               type: string
             jwksUri:
               type: string
-            kalmMode:
-              type: string
+            needExtraOAuthScope:
+              type: boolean
             port:
               type: integer
             showApproveScreen:
