remove tenant parts

--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -106,6 +106,7 @@ spec:
               description: deprecated, use Version instead
               type: string
             localModeConfig:
+              description: SaaSModeConfig  *SaaSModeConfig  `json:"saasModeConfig,omitempty"`
               properties:
                 cloudflareConfig:
                   properties:
@@ -119,37 +120,6 @@ spec:
               type: object
             physicalClusterId:
               type: string
-            saasModeConfig:
-              properties:
-                baseAppDomain:
-                  description: 'like: us-west1-1.clusters.kalm-apps.com'
-                  type: string
-                baseDNSDomain:
-                  description: 'like: us-west1-1.clusters.kalm-dns.com'
-                  type: string
-                baseDashboardDomain:
-                  description: 'like: us-west1-1.kalm.dev'
-                  type: string
-                cloudflareConfig:
-                  properties:
-                    apiToken:
-                      type: string
-                    domainToZoneIDConfig:
-                      additionalProperties:
-                        type: string
-                      type: object
-                  type: object
-                oidcIssuer:
-                  properties:
-                    clientId:
-                      type: string
-                    clientSecret:
-                      type: string
-                    issuerURL:
-                      description: 'like: https://staging.kalm.dev/oidc'
-                      type: string
-                  type: object
-              type: object
             skipCertManagerInstallation:
               type: boolean
             skipIstioInstallation:
